# jasna

./: .gitignore  .gitmodules  README.ja.md  README.md  README.zh.md  build_exe.py  debug_blend_contours.py  jasna.spec  profile_basicvsrpp.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: THIRD_PARTY_MODELS.md
docs/en/: advanced_processing.md  cli.md  development.md  gui.md  models.md  segments.md  streaming.md  tuning.md  vr180.md
docs/ja/: advanced_processing.md  cli.md  gui.md  models.md  segments.md  streaming.md  tuning.md  vr180.md
docs/zh/: advanced_processing.md  cli.md  gui.md  models.md  segments.md  streaming.md  tuning.md  vr180.md
jasna/: __init__.py  __main__.py  _frozen.py  _suppress_noise.py  accelerator.py  blend_buffer.py  bootstrap.py  cli_help.py  crop_buffer.py  engine_compiler.py  engine_paths.py  frame_queue.py  image_restore.py  main.py  os_utils.py  pipeline.py  pipeline_debug_logging.py  pipeline_items.py  pipeline_processing.py  pipeline_threads.py  pipeline_timing.py  post_export_action.py  sd15_crop_utils.py  segments.py  session_config.py  session_factory.py  settings.json  startup_timing.py  streaming.py  streaming_encoder.py  streaming_pipeline.py  tensor_utils.py  vr180.py  vram_offloader.py
jasna/benchmark/: __init__.py  basicvsrpp_restoration.py  harness.py  lada_yolo_detection_speed.py  rfdetr_detection_speed.py
jasna/gui/: __init__.py  app.py  branding.py  components.py  control_bar.py  engine_preflight.py  font_backend.py  icons.py  interactive_image_restore.py  locales.py  log_export.py  log_filter.py  log_panel.py  mask_feedback.py  models.py  mosaic_scan.py  paths.py  processor.py  queue_panel.py  restoration_preview.py  sd15_download_worker.py  segment_editor.py  segment_editor_state.py  segment_preview.py  segment_timeline.py  settings_panel.py  system_stats.py  theme.py  validation.py  video_session.py  wizard.py
jasna/media/: __init__.py  audio_utils.py  fisheye_remap.py  frame_rate.py  image_io.py  media_files.py  rgb_to_nv12.py  rgb_to_p010.py  spatial_metadata.py  splice.py  video_decoder.py  video_encoder.py  yuv_to_rgb.cu  yuv_to_rgb.fatbin  yuv_to_rgb.py
jasna/mosaic/: __init__.py  detection_registry.py  detections.py  migraphx_runner.py  rfdetr.py  yolo.py  yolo_tensorrt_compilation.py
jasna/packaging/: linux_lib_paths.py  pyinstaller_runtime_hook_linux_lib_paths.py  pyinstaller_runtime_hook_windows_dll_paths.py  windows_dll_paths.py
jasna/restorer/: __init__.py  basicvrspp_tenorrt_compilation.py  basicvsrpp_mosaic_restorer.py  basicvsrpp_sub_engines.py  frame_restorer.py  restoration_pipeline.py  restored_clip.py  rtx_superres_secondary_restorer.py  sd15_download.py  sd15_inpaint_restorer.py  secondary_restorer.py  swin2sr_secondary_restorer.py  tvai_secondary_restorer.py  unet4x_secondary_restorer.py
jasna/tensorrt/: __init__.py  trt_runner.py
jasna/tracking/: __init__.py  (+3 more)
patches/: fix_loading_mmengine_weights_on_torch26_and_higher.diff
tests/: conftest.py  test_amd_support.py  test_basicvrspp_tensorrt_compilation.py  test_basicvsrpp_mosaic_restorer.py  test_basicvsrpp_sub_engines.py  test_benchmark.py  test_blend_buffer.py  test_blending.py  test_bootstrap_sys_path_sanitization.py  test_clip_tracker.py  test_crop_buffer.py  test_detection_registry.py  test_e2e.py  test_engine_compiler.py  test_frame_buffer.py  test_frame_queue.py  test_frame_rate.py  test_frozen_patch_entrypoints.py  test_gui_about_dialog.py  test_gui_branding.py  test_gui_close_shutdown.py  test_gui_components.py  test_gui_engine_preflight.py  test_gui_entry_context_menu.py  test_gui_font_backend.py  test_gui_icons.py  test_gui_interactive_image_restore.py  test_gui_job_ordering.py  test_gui_post_export_action.py  test_gui_processor_pause.py  test_gui_queue_layout.py  test_gui_sd15_download_worker.py  test_gui_secondary_labels.py  test_gui_segments.py  test_gui_settings_persistence_paths.py  test_gui_settings_sections.py  test_gui_startup_and_wizard.py  test_gui_support_buttons.py  test_gui_temporal_filter_settings.py  test_gui_tvai_validation.py  (+76 more)
(+21 files in other folders)
