[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jasna"
version = "0.8.0"
description = "Jasna"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch==2.12.0+cu130",
  "torchvision==0.27.0+cu130",
  "tensorrt==10.16.1.11",
  "torch-tensorrt==2.12.0",
  # current_ctx support is merged upstream for PyAV 18.1.0 but is not published yet.
  # Linux releases override this with the pinned upstream-main wheel in build_linux.sh;
  # remove that override and require av>=18.1 once the release reaches PyPI.
  "av>=18,<19",
  "numpy",
  "psutil",
  "diffusers",
  "accelerate",
  "huggingface-hub",
  "mmengine==0.10.7",
  "opencv-python",
  "Pillow",
  "tqdm",
  "customtkinter",
  "tkinterdnd2",
  "ultralytics",
  "nvidia-vfx",
  "onnx",
  "cryptography>=42",
]

[project.scripts]
jasna = "jasna.main:main"

[project.optional-dependencies]
dev = [
  "nuitka>=2.4",
  "pytest",
  "pytest-cov",
  "scikit-build",
  "cmake",
  "ninja",
]

[tool.setuptools]
packages = ["jasna", "jasna.gui", "jasna.mosaic", "jasna.restorer", "jasna.trt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:'maxsplit' is passed as positional argument:DeprecationWarning:mmengine\\.utils\\.misc",
  "ignore:`torch\\.jit\\.script` is deprecated:DeprecationWarning",
]
