[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jasna"
version = "0.8.1"
description = "Jasna"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # current_ctx support is merged upstream for PyAV 18.1.0 but is not published yet.
  # Linux releases override this with the pinned upstream-main wheel in build_linux.sh;
  # remove that override and require av>=18.1 once the release reaches PyPI.
  "av>=18,<19",
  "numpy>=1.26",
  "psutil",
  "diffusers",
  "accelerate",
  "huggingface-hub",
  "mmengine==0.10.7",
  "opencv-python",
  "Pillow",
  "tqdm",
  "customtkinter",
  "tkinterdnd2",
  "ultralytics",
  "onnx",
  "cryptography>=42",
]

[project.scripts]
jasna = "jasna.main:main"

[project.optional-dependencies]
nvidia = [
  "torch==2.12.0+cu130",
  "torchvision==0.27.0+cu130",
  "tensorrt==10.16.1.11",
  "torch-tensorrt==2.12.0",
  "nvidia-vfx",
]
amd = [
  "torch==2.9.1",
  "torchvision==0.24.1",
  "onnxruntime-migraphx==1.23.2",
  "numpy==1.26.4",
]
dev = [
  "nuitka>=2.4",
  "pytest",
  "pytest-cov",
  "scikit-build",
  "cmake",
  "ninja",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["jasna*"]
exclude = ["jasna.protection.keytool*", "jasna.protection.tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:'maxsplit' is passed as positional argument:DeprecationWarning:mmengine\\.utils\\.misc",
  "ignore:`torch\\.jit\\.script` is deprecated:DeprecationWarning",
]
